// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BlogPost > renders basic case correctly 1`] = `
"<article class="relative group flex flex-col w-full gap-y-6">
  <!--v-if-->
  <div class="flex flex-col justify-between flex-1">
    <div class="flex-1">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`BlogPost > renders with props correctly 1`] = `
"<article class="relative group flex flex-col w-full gap-y-6">
  <div class="ring-1 ring-gray-200 dark:ring-gray-800 relative overflow-hidden aspect-[16/9] w-full rounded-lg pointer-events-none">
    <!---->
  </div>
  <div class="flex flex-col justify-between flex-1">
    <div class="flex-1">
      <!--v-if-->
      <div class="mb-3"><span class="inline-flex items-center font-medium rounded-md text-xs px-2 py-1 bg-primary-50 dark:bg-primary-400 dark:bg-opacity-10 text-primary-500 dark:text-primary-400 ring-1 ring-inset ring-primary-500 dark:ring-primary-400 ring-opacity-25 dark:ring-opacity-25">Badge</span></div>
      <p class="text-gray-900 dark:text-white text-xl font-semibold truncate flex items-center gap-1.5 group-hover:text-gray-600 dark:group-hover:text-gray-300 transition-colors duration-200">Title</p>
      <p class="text-base text-gray-500 dark:text-gray-400 mt-1">Description</p>
    </div>
    <div class="relative flex items-center gap-x-3 mt-4">
      <div class="inline-flex flex-row-reverse justify-end"><span class="inline-flex items-center justify-center flex-shrink-0 rounded-full h-6 w-6 text-xs ring-white dark:ring-gray-900 -me-1.5 first:me-0 relative ring-1 lg:hover:scale-105 lg:hover:ring-primary-500 dark:lg:hover:ring-primary-400 transition-transform"><img class="rounded-full h-6 w-6 text-xs" alt="Author name" src="https://i.pravatar.cc/120?img=1"><!--v-if--></span></div><time datetime="2023-12-24T23:00:00.000Z" class="text-sm text-gray-500 dark:text-gray-400 font-medium pointer-events-none">Dec 25, 2023</time>
    </div>
  </div>
</article>"
`;

exports[`BlogPost > renders with slots correctly 1`] = `
"<article class="relative group flex flex-col w-full gap-y-6">
  <div class="ring-1 ring-gray-200 dark:ring-gray-800 relative overflow-hidden aspect-[16/9] w-full rounded-lg pointer-events-none">Image slot</div>
  <div class="flex flex-col justify-between flex-1">
    <div class="flex-1">
      <!--v-if-->
      <div class="mb-3">Badge slot</div>
      <p class="text-gray-900 dark:text-white text-xl font-semibold truncate flex items-center gap-1.5 group-hover:text-gray-600 dark:group-hover:text-gray-300 transition-colors duration-200">Title slot</p>
      <p class="text-base text-gray-500 dark:text-gray-400 mt-1">Description slot</p>
    </div>
    <!--v-if-->
  </div>
</article>"
`;
